modif singletonList -> List.of pour les 2